[waybar] Smaller icons and seperate titles per window

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -54,7 +54,8 @@
     // },
     "hyprland/window": {
         "icon": true,
-        "icon-size": 20
+        "icon-size": 20,
+        "separate-outputs": true
     },
     "keyboard-state": {
         "numlock": true,
