--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -94,7 +94,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $primary $tertiary 45deg
+    col.active_border = $primary $tertiary $secondary 45deg
     col.inactive_border = $background
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -126,7 +126,7 @@ decoration {
     blur {
         enabled = true
         size = 4
-        passes = 1
+        passes = 2
 
         vibrancy = 0.1696
     }
